# bt_tmp

./: README.md
planning_tutorial/: CMakeLists.txt  package.xml
planning_tutorial/bt_xmls/: AskFavorite.xml  Describe_person.xml  FindObjects.xml  GoTo.xml  RegisterPerson.xml  dummy_main.xml  findObjects.xml
planning_tutorial/configs/: lifecycle_node.yaml
planning_tutorial/include/planning_tutorial/: Describe_person.h  FindObjects.h  GetTextbyLLM.h  GoTo.h  InitLifecycle.h  Listen.h  Speak.h
planning_tutorial/src/: Describe_person.cpp  FindObjects.cpp  GetTextbyLLM.cpp  GoTo.cpp  InitLifecycle.cpp  Listen.cpp  Speak.cpp  bt_main.cpp
rby1_ros2/rby1_custom_interfaces/: CMakeLists.txt  package.xml
rby1_ros2/rby1_custom_interfaces/srv/: CallLoc.srv  SetCaptionMode.srv
rby1_ros2/rby1_custom_pkg/: package.xml  setup.cfg  setup.py
rby1_ros2/rby1_custom_pkg/configs/: semantic.yaml  semantic_backup.yaml
rby1_ros2/rby1_custom_pkg/rby1_custom_pkg/: action.py  autonomous.py  tmp.py  yolo.py
rby1_ros2/rby1_navigation/: CMakeLists.txt
rby1_ros2/rby1_navigation/launch/: carter_navigation.launch.py
rby1_ros2/rby1_navigation/maps/: carter_athome_navigation.yaml
rby1_ros2/rby1_navigation/params/: carter_navigation_params.yaml
rby1_ros2/rby1_navigation/rviz2/: carter_navigation.rviz
rby1_ros2/rby1_navigation/urdf/: model_v1_1.urdf
task/: package.xml  setup.py
task/config/: vosper_config.yaml
task/task/: detect2.py  detector.py  vlm.py  vlm_2.py  vosper.py
vosper_ros/: package.xml  setup.cfg  setup.py
vosper_ros/config/: data.yaml
vosper_ros/launch/: receptionist.launch.py  vosper.launch.py
vosper_ros/vosper_ros/: bt_vosper.py  fsm.py  speech_to_tts.py  vosper_node.py  vosper_node_receptionist (backup).py  vosper_node_receptionist.py
